[package]
name = "test-trait"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferrisetw = { path = "ferrisetw", version = "0.1.1" }

[dependencies.windows]
version = "0.42.0"
features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_System_Diagnostics_ToolHelp"]
